--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,5 @@ spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.cache=false
 # 使用HTML5标准
 spring.thymeleaf.mode=HTML5
+# 打印sql
+spring.jpa.show-sql=true
